--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   pull_to_refresh: ^1.5.8
   dio: ^3.0.9
-  youtube_player_flutter: ^6.1.0+4
+#  youtube_player_flutter: ^6.1.0+4
   shared_preferences: ^0.5.6+3
   shimmer: ^1.1.0
   font_awesome_flutter: ^8.8.0
