--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shimmer: ^1.1.0
   font_awesome_flutter: ^8.8.0
   flutter_swiper: ^1.1.6
+  flutter_time_picker_spinner: ^1.0.6
   flutter_icons: ^1.0.0+1
   image_picker: ^0.6.3+4
   flutter_bloc: ^3.2.0
