--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   carousel_pro: ^1.0.0
   photo_view: ^0.9.2
   geolocator: ^5.3.0
+  geocoder: ^0.2.1
+  fluster: ^1.1.2
+  meta: ^1.1.8
+  flutter_cache_manager: ^1.2.0
   google_maps_flutter: ^0.5.24+1
   location: ^2.5.4
   cloud_firestore: ^0.13.4+2
