--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/icons/logo.png"
+  adaptive_icon_background: "#FF0000"
+
 
 
 # For information on the generic Dart part of this file, see the
