--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,8 @@
 org.gradle.jvmargs=-Xmx1536M
+# org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError
+# org.gradle.daemon=true
+# org.gradle.parallel=true
+# org.gradle.configureondemand=true
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
