--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,35 +28,37 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
   pull_to_refresh: ^1.5.8
   dio: ^3.0.9
-  youtube_player_flutter: ^6.1.0+4
-  shared_preferences: ^0.5.6+3
-  shimmer: ^1.1.0
+  youtube_player_flutter: ^6.1.1
+  shared_preferences: ^0.5.7+2
+  shimmer: ^1.1.1
 
-  font_awesome_flutter: ^8.8.0
+  font_awesome_flutter: ^8.8.1
+  custom_navigator: ^0.3.0
+  get: ^2.4.0
   flutter_swiper: ^1.1.6
-  flutter_time_picker_spinner: ^1.0.6
-  flutter_datetime_picker: ^1.3.5
-  flutter_icons: ^1.0.0+1
-  image_picker: ^0.6.3+4
-  flutter_bloc: ^3.2.0
-  intro_views_flutter: ^2.8.0
+  flutter_time_picker_spinner: ^1.0.6+1
+  flutter_datetime_picker: ^1.3.8
+  flutter_icons: ^1.1.0
+  image_picker: ^0.6.6+1
+  flutter_bloc: ^4.0.0
+  intro_views_flutter: ^2.8.1
   flutter_slidable: ^0.5.4
-  carousel_slider: ^1.4.1
+  carousel_slider: ^2.1.0
   carousel_pro: ^1.0.0
   photo_view: ^0.9.2
-  geolocator: ^5.3.0
+  geolocator: ^5.3.1
   geocoder: ^0.2.1
   fluster: ^1.1.2
   meta: ^1.1.8
-  flutter_cache_manager: ^1.2.0
+  flutter_cache_manager: ^1.2.2
   google_maps_flutter: ^0.5.24+1
   location: ^2.5.4
-  cloud_firestore: ^0.13.4+2
+  cloud_firestore: ^0.13.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.7.3"
+  # flutter_launcher_icons: "^0.7.3"
 
 flutter_icons:
   android: true
