--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_datetime_picker: ^1.3.8
   flutter_icons: ^1.1.0
   image_picker: ^0.6.6+1
-  image_selector_formfield: ^1.0.3
+  cached_network_image: ^2.2.0+1
   flutter_bloc: ^4.0.0
   intro_views_flutter: ^2.8.1
   flutter_slidable: ^0.5.4
