--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_icons: ^1.1.0
   image_picker: ^0.6.6+1
   cached_network_image: ^2.2.0+1
+  path: ^1.6.4
+  firebase_storage: ^3.1.6
+  firebase_auth: ^0.16.1
   flutter_bloc: ^4.0.0
   intro_views_flutter: ^2.8.1
   flutter_slidable: ^0.5.4
