--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   flutter_time_picker_spinner: ^1.0.6+1
   flutter_datetime_picker: ^1.3.8
+  country_code_picker: ^1.3.15
+  intl_phone_field: ^1.1.0
   flutter_icons: ^1.1.0
   image_picker: ^0.6.6+1
   cached_network_image: ^2.2.0+1
