--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
   pull_to_refresh: ^1.5.8
   dio: ^3.0.9
-  youtube_player_flutter: ^6.1.1
+  youtube_player_flutter: ^7.0.0+3
   shared_preferences: ^0.5.7+2
   shimmer: ^1.1.1
 
@@ -59,7 +59,7 @@ dependencies:
   flutter_cache_manager: ^1.2.2
   google_maps_flutter: ^0.5.24+1
   location: ^2.5.4
-  cloud_firestore: ^0.13.5
+  cloud_firestore: ^0.13.6
 
 dev_dependencies:
   flutter_test:
